@@ -23,4 +23,6 @@ void pixels_to_logical (gint px, gint py, gint *lx, gint *ly);
 void start_spinning (void);
 void stop_spinning (void);
 
+void resize_graphics (void);
+
 #endif /* DRAWING_H */
